v2.0.11

Changes:
 - Fixed bug where disabling quark / rustic compat caused blocks to have no drop