@@ -6,4 +6,4 @@ mc_version=1.12.2
 forge_version=14.23.5.2768
 mcp_mapping=snapshot_20180813
 # Mod Info
-mod_version=2.0.11
+mod_version=2.0.12
